<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="ApplicationName">Traceper</string>
    <string name="hello">Hello World, startApp</string>
    <string name="friend_list">Friend List</string>
    <string name="email">E-mail:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="messaging">Messaging</string>
    <string name="local_service_started">App service started</string>
    <string name="local_service_stopped">App service stopped</string>
    <string name="local_service_connected">local_service_connected</string>
    <string name="OK">OK</string>
    <string name="not_connected_to_service">Not connected to the service and 
	this is not supposed to happend so please inform this situation to 
	ahmetmermerkaya@hotmail.com</string>
    <string name="fill_both_username_and_password">Please fill both username and password</string>
    <string name="make_sure_username_and_password_correct">Please make sure that
	your username and password correct</string>
    <string name="user_offline">This user is offline</string>
    <string name="register">Register</string>
    <string name="exit_application">Exit</string>
    <string name="password_again">Password(again):</string>
    <string name="signup_fill_all_fields">Please fill all fields</string>
    <string name="signup_type_same_password_in_password_fields">Type same password in password fields</string>
    <string name="signup_failed">Sign up failed because of unknown reason</string>
    <string name="signup_email_crashed">Your email have been already used</string>
    <string name="signup_successfull">Your data is recorded successfully, check your email to activate your account</string>
    <string name="signup_not_required_activation_successfull">Registration is successfull. Logining...</string>
    <string name="email_not_valid">Email is not valid!</string>
    <string name="email_and_password_length_short">Email and password length must be at least 5</string>
    <string name="add_new_friend">Add new friend</string>
    <string name="no_friend">You have no friend,\n you can add new friends by menu</string>
    <string name="add">Add</string>
    <string name="request_sent">Your request has been sent</string>
    <string name="type_friend_username">Please type your friend username</string>
    <string name="new_friend_request_exist">New friend request</string>
    <string name="approve_selected_friends">Approve Selecteds and Discard Others</string>
    <string name="not_connected_to_network">Please connect to a network...</string>
    <string name="message_cannot_be_sent">Message was not been able to sent</string>
    <string name="unknown_error_occured">Unknown error occured, please consult the developer</string>
    <string name="alert_dialog_server_address">Server address:</string>
    <string name="settings">Settings</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_settings">Settings</string>
    <string name="lastLocationDataSentAt">Last location data is sent at</string>
    <string name="realname">Name</string>
    <string name="http_request_failed">Http request failed, please make sure that URL is valid in Settings and you are connected to the Internet...</string>
    <string name="take_photo">Take Photo</string>
    <string name="http_missing_parameter">Missing parameter, please consult the developer</string>
    <string name="upload_succesfull">Upload is successfull</string>
    <string name="upload_failed">Upload is failed. Please try again later...</string>
    <string name="make_it_public">Yes, make it public</string>
    <string name="make_it_private">No, make it private to my friends</string>
    <string name="cancel_upload">Cancel Upload</string>
    <string name="uploading">Uploading, please wait...</string>
    <string name="loading">Loading, please wait...</string>
    <string name="traceper_login">Traceper-Login</string>
    <string name="traceper_register">Traceper-Register</string>
    <string name="saving">Saving, please wait...</string>
    <string name="waiting_location">Waiting for location</string>
    <string name="sending_location_data_successfull">Location sent successfully</string>
    <string name="check_in_automatically">Check in automatically in background</string>
    <string name="check_in_manually">Check in</string>
    <string name="location_hasnt_received">Location hasn\'t been received yet.</string>
    <string name="gps_disabled_message">Your GPS is disabled! Would you like to enable it?</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="sending_location_data">Sending location data to server...</string>
    <string name="sending_location_data_failed">Sending location data failed, it will be tried again...</string>
    <string name="no_location_provider">Please enable GPS or Network provider to get location</string>
    <string name="description">Description</string>
    <string name="makeItPublic">Make it public</string>
    <string name="upload_photo">Upload photo</string>
    <string name="please_enter_description">Please enter description</string>
    <string name="location_fix_problem">Location fix hasn\'t been received.</string>
    <string name="signingout">Signing out...</string>
    <string name="show_all_user_location_on_map">Show all us. l. o. m.</string>
    <string name="list_refresh">Refresh - Friends list</string>
    <string name="map_refresh">Refresh - Users location</string>
    <string name="past_points_refresh">Refresh - Past Points</string>
    <string name="all_past_points_on_map">All points on the map</string>
    <string name="search_users">Search User</string>
    <string name="friendship_requests">Friendship Requests</string>
    <string name="search_failed">named user does not exist!</string>
    <string name="couldnt_find">any request could not find!</string>
    <string name="turn_back">Turn Back</string>
    <string name="enterPassword">Please enter password you specified in registration</string>
    <string name="camera_resolution">Choose camera resolution</string>
    <string name="profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_user_area">UserArea</string>
	<string name="mylocation">My Location</string>
	<string name="user_past_point">Past Point</string>
	<string name="video">Take Video</string>
</resources>