<?xml version="1.0" encoding="utf-8"?>
<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android" 
		android:id="@+id/scrollview"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		>
<LinearLayout 
	android:orientation="vertical"
    android:padding="10dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"    
>
	<LinearLayout 
		android:gravity="center"
		android:orientation="horizontal"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    >    
   	 		<ImageView 
    			android:src="@drawable/logo"
    			android:adjustViewBounds="true"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"    	
    		/>
	</LinearLayout>
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/email"
    />
    
    <EditText android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:singleLine="true"
        android:password="false"
    />
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/password"
    />
    
    <EditText android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:singleLine="true"
        android:password="true"
    /> 
    <LinearLayout android:orientation="horizontal"
    			  android:layout_width="fill_parent"
    			  android:layout_height="wrap_content">
			  
    <Button android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
    />
    <Button android:id="@+id/cancel_login"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/cancel"
    />
	</LinearLayout>

    <LinearLayout
        android:id="@+id/account_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center" 
     >

        	<Button
            android:id="@+id/fbconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonfb" 
            />

    </LinearLayout>
    

</LinearLayout>
</ScrollView>